--- a/slides/slides.tex
+++ b/slides/slides.tex
@@ -200,6 +200,12 @@ Difference terms are studied extensively in the literature.
 
   Roughly speaking, having a difference term is slightly stronger than having
   a Taylor term and slightly weaker than having a Mal'tsev term.
+
+  DT $\Rightarrow$ weak dt $\Rightarrow$  Taylor
+  
+  For finite $\bA$, $\bbV(\bA)$ has a weak difference term iff
+  $\bbV(\bA)$ has a  Taylor term.
+  \onslide<2>{{\color{gray}(locally finite?)}}
 \end{frame}
 
 \begin{frame}
@@ -280,7 +286,7 @@ In case 2,
 \end{frame}
 
 \begin{frame}[shrink=25]{A useful theorem}
-\begin{theorem}
+\begin{theorem}[Kearnes (1998)]
   \label{thm:F}
   Let $\sV$ be a variety, and $\bF = \bF_{\sV}(2)$ the 2-generated
   free algebra in $\sV$. The following are equivalent:
