--- a/notes/inputs/macros.sty
+++ b/notes/inputs/macros.sty
@@ -41,6 +41,7 @@
 \newcommand{\alg}[1]{\ensuremath{\mathbf{#1}}}
 \newcommand{\Sub}{\ensuremath{\operatorname{Sub}}}
 \newcommand{\Con}{\ensuremath{\operatorname{Con}}}
+\newcommand{\Tol}{\ensuremath{\operatorname{Tol}}}
 \newcommand{\Cg}{\ensuremath{\operatorname{Cg}}}
 \newcommand{\Sg}{\ensuremath{\operatorname{Sg}}}
 \newcommand{\Clo}{\ensuremath{\operatorname{\mathsf{Clo}}}}
